[package]
name = "yake"
version = "0.1.0"
edition = "2021"

[dependencies]
yake-rust = { path = "../yake_rust" }
clap = { version = "4.5.26", features = ["cargo", "derive", "string"] }
serde_json = { version = "1.0.135", optional = true }

[features]
default = ["json_format"]
json_format = ["dep:serde_json", "yake-rust/serialize"]